[gd_scene load_steps=9 format=2]

[ext_resource path="res://codigo/Principal.gd" type="Script" id=1]
[ext_resource path="res://scenas/Jueves.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenas/Lunes.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenas/Martes.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenas/Domingo.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenas/Viernes.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenas/Miercoles.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenas/Sabado.tscn" type="PackedScene" id=8]

[node name="Principal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 497.0
margin_bottom = 785.0
size_flags_horizontal = 5
size_flags_vertical = 15
alignment = 2

[node name="DiaDomingo" parent="MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
visible = false
margin_bottom = 726.0

[node name="DiaJueves" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_bottom = 726.0

[node name="DiaLunes" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_bottom = 726.0

[node name="DiaMartes" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_top = 362.0
margin_bottom = 450.0

[node name="DiaMiercoles" parent="MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
visible = false
margin_top = 454.0
margin_bottom = 542.0

[node name="DiaSabado" parent="MarginContainer/VBoxContainer" instance=ExtResource( 8 )]
visible = false
margin_top = 546.0
margin_bottom = 634.0

[node name="DiaViernes" parent="MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
visible = false
margin_bottom = 726.0

[node name="MarginBtnsDias" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 730.0
margin_right = 477.0
margin_bottom = 770.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginBtnsDias"]
margin_left = 10.0
margin_top = 10.0
margin_right = 467.0
margin_bottom = 30.0
custom_constants/separation = 6

[node name="BtnLunes" type="Button" parent="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer"]
margin_right = 50.0
margin_bottom = 20.0
text = "Lunes"

[node name="BtnMartes" type="Button" parent="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer"]
margin_left = 56.0
margin_right = 112.0
margin_bottom = 20.0
text = "Martes"

[node name="BtnMiercoles" type="Button" parent="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer"]
margin_left = 118.0
margin_right = 193.0
margin_bottom = 20.0
text = "Miercoles"

[node name="BtnJueves" type="Button" parent="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer"]
margin_left = 199.0
margin_right = 252.0
margin_bottom = 20.0
text = "Jueves"

[node name="BtnViernes" type="Button" parent="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer"]
margin_left = 258.0
margin_right = 318.0
margin_bottom = 20.0
text = "Viernes"

[node name="BtnSabado" type="Button" parent="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer"]
margin_left = 324.0
margin_right = 381.0
margin_bottom = 20.0
text = "Sabado"

[node name="BtnDomingo" type="Button" parent="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer"]
margin_left = 387.0
margin_right = 457.0
margin_bottom = 20.0
text = "Domingo"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer/BtnLunes" to="." method="_on_BtnLunes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer/BtnMartes" to="." method="_on_BtnMartes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer/BtnMiercoles" to="." method="_on_BtnMiercoles_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer/BtnJueves" to="." method="_on_BtnJueves_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer/BtnViernes" to="." method="_on_BtnViernes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer/BtnSabado" to="." method="_on_BtnSabado_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginBtnsDias/HBoxContainer/BtnDomingo" to="." method="_on_BtnDomingo_pressed"]
